# algo

coursera/data-structures/: .gitignore
coursera/data-structures/week1_basic_data_structures/: .editorconfig  week1.sln
coursera/data-structures/week1_basic_data_structures/2_tree_height/: a.out  tree-height
coursera/data-structures/week1_basic_data_structures/week1/: Program.cs  StdIn.cs  week1.csproj
coursera/data-structures/week1_basic_data_structures/week1.tests/: MaxSlidingWindowTests.cs  PacketProcessingTests.cs  StackWithMaxTests.cs  week1.tests.csproj
coursera/data-structures/week1_basic_data_structures/week1/1_brackets_in_code/: Brackets.cs  Points.cs  RunLengthEcoding.cs  check_brackets.cs
coursera/data-structures/week1_basic_data_structures/week1/3_network_simulation/: PacketProcessing.cs
coursera/data-structures/week1_basic_data_structures/week1/4_stack_with_max/: StackWithMax.cs
coursera/data-structures/week1_basic_data_structures/week1/4_stack_with_max/tests/: 01  02
coursera/data-structures/week1_basic_data_structures/week1/5_max_sliding_window/: MaxSlidingWindow.cs  max_sliding_window.py
coursera/data-structures/week1_basic_data_structures/week1/Properties/: launchSettings.json
cpp/: CMakeLists.txt  CMakeSettings.json  Readme.md
cpp/src/hrk/: BinarySearchTree.h  CMakeLists.txt  bst.cpp  quatile.cpp
cpp/src/samples/: CMakeLists.txt  accumulate.cpp  allocation.cpp  ifstream.cpp  istream_iterator.cpp  move_semantics.cpp  next_permutation.cpp  priority_queue.cpp  uniform_init.cpp  vector.cpp
cpp/src/uva/: CMakeLists.txt  p00336.cpp  p00485.cpp  p10189.cpp  p10343.cpp  p10928.cpp  p11059.cpp  p11264.cpp  p11340.cpp  p11459.cpp  p12697.cpp  p12697.txt  p12697_1.txt  p12697_2.txt  template.cpp
cpp/tests/: CMakeLists.txt  main.cpp  p10343_tests.cpp  strings.cpp  test_main.cpp
cs/: .editorconfig  cs.sln
cs/hrk/: Template.cs
cs/hrk/10-days-stats/: EntryPoint.cs  Template.cs  cs.csproj  day0_1.cs  day1.cs  day1_1.cs  day1_2.cs  day1_3.cs  day2_1.cs  input_day1_1_5.txt
cs/hrk/10_days_of_stats/: EntryPoint.cs  day0_1.cs  day0_2.cs  day1_1.cs
cs/hrk/data_structures/: DynamicArray.cs  InsertDoublyLinkedListNodeTest.cs  RemoveDuplicatesTest.cs
py/src/cwr/: is_uppercase.py  lost_without_a_map.py  test.py  the_millionth_fibonacci.py
