project(uva)
file(GLOB sourceFiles ${PROJECT_SOURCE_DIR}/*.cpp)
foreach (sourceFile in ${sourceFiles})
	if (NOT ${sourceFile} STREQUAL "in" )
		get_filename_component(appName ${sourceFile} NAME_WE)
		message (${appName})
		add_executable (${appName} ${sourceFile})
		#install (TARGETS ${appName} DESTINATION bin)
	endif ()
endforeach (sourceFile)
file(COPY "${PROJECT_SOURCE_DIR}/p12697.txt" DESTINATION .)
file(COPY "${PROJECT_SOURCE_DIR}/p12697_0.txt" DESTINATION .)
file(COPY "${PROJECT_SOURCE_DIR}/p12697_1.txt" DESTINATION .)
file(COPY "${PROJECT_SOURCE_DIR}/p12697_2.txt" DESTINATION .)

